Made changes to the x and y axis on the graph

--- a/bokehApp/templates/starter.html
+++ b/bokehApp/templates/starter.html
@@ -8,6 +8,9 @@
 </head>
 <body>
 <!--    <h1>Bokeh Starter Graph</h1> -->
+<div align="center">Current temperature of water at boiler: 198<br>
+Current temperature of water leaving the house: 190
+</div>
     {{div | safe}}
 </body>
     <script type="text/javascript" src="http://cdn.pydata.org/bokeh/release/bokeh-1.2.0.min.js"></script>
